--- a/src/program/Cargo.toml
+++ b/src/program/Cargo.toml
@@ -17,17 +17,8 @@ num-derive = "0.2"
 num-traits = "0.2"
 serde = "1.0.100"
 serde_derive = "1.0.100"
-solana-sdk = { git = "https://github.com/solana-labs/solana", default-features = false }
-
-[dev_dependencies]
+solana-sdk = { git = "https://github.com/solana-labs/solana", default-features = false, features=["program"] }
 solana-sdk-bpf-test = { git = "https://github.com/solana-labs/solana", default-features = false }
-
-[features]
-program = ["solana-sdk/program"]
-default = ["program"]
-
-[workspace]
-members = []
 
 [lib]
 name = "solana_bpf_token"
