--- a/src/program/Cargo.toml
+++ b/src/program/Cargo.toml
@@ -12,7 +12,6 @@ homepage = "https://solana.com/"
 edition = "2018"
 
 [dependencies]
-bincode = "1.1.4"
 num-derive = "0.2"
 num-traits = "0.2"
 serde = "1.0.100"
@@ -22,4 +21,4 @@ solana-sdk-bpf-test = { git = "https://github.com/solana-labs/solana", default-f
 
 [lib]
 name = "solana_bpf_token"
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "lib"]
