Point to git, update npm scripts

--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "lint:watch": "watch 'npm run lint:fix' . --wait=1",
     "bpf-sdk:update": "node_modules/@solana/web3.js/bin/bpf-sdk-install.sh",
     "build:program": "./src/program/do.sh build",
-    "clean:program": "./src/program/do.sh clean",
-    "test:program": "npm run build:program && ./src/program/do.sh test",
+    "clean:program": "./src/program/do.sh clean && cargo clean --manifest-path ./src/program-test/Cargo.toml",
+    "test:program": "./src/program/do.sh test",
+    "bench:program": "npm run build:program && cargo test --manifest-path ./src/program-test/Cargo.toml -- --nocapture",
     "localnet:update": "solana-localnet update",
     "localnet:up": "set -x; solana-localnet down; set -e; solana-localnet up",
     "localnet:down": "solana-localnet down",
