--- a/src/program/Cargo.toml
+++ b/src/program/Cargo.toml
@@ -14,8 +14,8 @@ edition = "2018"
 [dependencies]
 num-derive = "0.2"
 num-traits = "0.2"
-solana-sdk = { path = "../../../../active/solana/sdk", default-features = false, features=["program"] }
-solana-sdk-bpf-test = { path = "../../../../active/solana/sdk/bpf/rust/test", default-features = false }
+solana-sdk = { git = "https://github.com/solana-labs/solana", default-features = false, features=["program"] }
+solana-sdk-bpf-test = { git = "https://github.com/solana-labs/solana", default-features = false }
 
 [lib]
 name = "solana_bpf_token"
