--- a/src/program-test/Cargo.toml
+++ b/src/program-test/Cargo.toml
@@ -16,8 +16,8 @@ byteorder = "1.3.2"
 num-derive = "0.2"
 num-traits = "0.2"
 solana-bpf-token = { path = "../program" }
-solana-sdk = { git = "https://github.com/solana-labs/solana", default-features = false, features=["program"] }
-solana-sdk-bpf-test = { git = "https://github.com/solana-labs/solana", default-features = false }
-solana-bpf-loader-program = { git = "https://github.com/solana-labs/solana" }
-solana-logger = { git = "https://github.com/solana-labs/solana" }
+solana-sdk = { version = "=1.0.5", default-features = false, features=["program"] }
+solana-sdk-bpf-test = { path = "../../node_modules/@solana/web3.js/bpf-sdk/rust/test", default-features = false }
+solana-bpf-loader-program = { version = "=1.0.5" }
+solana-logger = { version = "=1.0.5" }
 
