--- a/src/program/Cargo.toml
+++ b/src/program/Cargo.toml
@@ -14,8 +14,8 @@ edition = "2018"
 [dependencies]
 num-derive = "0.2"
 num-traits = "0.2"
-solana-sdk = { git = "https://github.com/solana-labs/solana", default-features = false, features=["program"] }
-solana-sdk-bpf-test = { git = "https://github.com/solana-labs/solana", default-features = false }
+solana-sdk = { version = "=1.0.5", default-features = false, features=["program"] }
+solana-sdk-bpf-test = { path = "../../node_modules/@solana/web3.js/bpf-sdk/rust/test", default-features = false }
 thiserror = "1.0"
 
 [lib]
